galera/src/replicator_smm.cpp
@@ -121,6 +121,7 @@ galera::ReplicatorSMM::ReplicatorSMM(const struct wsrep_init_args* args)
     sst_cond_           (),
     sst_retry_sec_      (1),
     sst_received_       (false),
+    sst_graceful_shutdown_ (false),
     gcache_progress_cb_ (ProgressCallback<int64_t>(WSREP_MEMBER_UNDEFINED,
                                                    WSREP_MEMBER_UNDEFINED)),
     gcache_             (&gcache_progress_cb_, config_, config_.get(BASE_DIR)),
