sql/mysqld.cc
@@ -5241,8 +5241,21 @@ static int init_server_components()
 #endif
 
     if ((ho_error= handle_options(&remaining_argc, &remaining_argv, removed_opts,
-                                  mysqld_get_one_option)))
+                                  mysqld_get_one_option))) {
+
+#ifdef WITH_WSREP
+#if 0
+      if (ho_error == EXIT_UNKNOWN_VARIABLE) {
+#endif
+        Wsrep_server_state::instance().disable_node_reset();
+#if 0
+      }
+#endif
+#endif
+
       unireg_abort(ho_error);
+    }
+
     /* Add back the program name handle_options removes */
     remaining_argc++;
     remaining_argv--;
